// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > renders bare card 1`] = `
<div>
  <div
    class="bg-surface shadow-elev-1 relative overflow-hidden rounded-lg transition-shadow duration-200 ease-[var(--ease-out-soft)] hover:shadow-neu-hover"
  >
    content
  </div>
</div>
`;

exports[`Card > renders full composition 1`] = `
<div>
  <div
    class="bg-surface shadow-elev-1 relative overflow-hidden rounded-lg transition-shadow duration-200 ease-[var(--ease-out-soft)] hover:shadow-neu-hover"
  >
    <div
      class="flex items-start justify-between gap-4 px-6 pt-6 pb-3"
    >
      <h3
        class="text-2xs text-ink-dim font-medium tracking-[0.12em] uppercase"
      >
        Funil
      </h3>
    </div>
    <div
      class="px-6 pb-6"
    >
      Corpo
    </div>
    <div
      class="text-ink-muted px-6 py-3 text-xs shadow-[inset_0_1px_0_0_hsl(var(--hairline)/0.5)]"
    >
      rodapé
    </div>
  </div>
</div>
`;
